--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SchoolContext": "Server=KAICHUNCHAN528E\\sqlexpress;Database=SchoolContext-0e9;Trusted_Connection=True;MultipleActiveResultSets=true;Trust server Certificate=True"
+  }
 }
